# axum-pipe-line

./: .env  .gitignore  Cargo.toml  start.example.sh  systemd.example.text
.cargo/: config.toml
.github/workflows/: deploy.yml
prisma/: schema.prisma
server/: Cargo.toml
server/src/: errors.rs  extract.rs  handlers.rs  lib.rs
server/src/extract/: security.rs  state.rs
server/src/handlers/edit_nft/: mod.rs
server/src/handlers/parse_nft/: io.rs  mod.rs
server/src/handlers/sign_in/: io.rs  mod.rs
server/src/shared/: services.rs
server/src/shared/database/entities/: collection.rs  mod.rs  nft.rs  post.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
server/src/shared/database/repositories/: mod.rs  nft_repository.rs  user_repository.rs
server/src/shared/services/: opensea.rs
src/: main.rs
system/: Cargo.toml
system/src/: block.rs  lib.rs  main.rs  pg_triggers.rs  schedule.rs  watcher.rs
system/src/pg_triggers/: nfts_change.rs
system/src/schedule/: inactive_nfts.rs
system/src/watcher/: compute_block.rs  update_position.rs
