[package]
name = "nft-adc-platform"
version = "0.1.0"
edition = "2021"
authors = ["theanh098"]

[workspace]
members = ["system","server"]

[package.metadata.commands]
sea-gen = "sea generate entity -o server/src/shared/database/entities --with-serde both"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
server = { path = "./server" }
