[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

surf = { version = "2.3.2", features = ["hyper-client"] }
tokio = { version = "1.33.0", features = ["full"] }
anyhow = { version = "1.0.75" }
sea-orm = { version = "0.12.3", features = ["sqlx-postgres","runtime-tokio-native-tls","macros"] }
serde = { version = "1.0.188", features = ["derive"] }
jsonwebtoken = "9.0.0"
serde_json = "1.0.107"
futures = "0.3.28"
bcrypt = "0.15.0"
deadpool-redis = "0.13.0"
chrono = "0.4.26"
thiserror = "1.0.49"
axum = { version = "0.6.20", features = ["headers", "http2"] }
siwe = "0.6.0"
ethers = "2.0.7"

